--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "udemy",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://gateway-kms.apps.ocp4.pacosta.com",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -16,8 +17,10 @@
     "crypto-js": "^4.1.1",
     "formik": "^2.4.4",
     "js-cookie": "^3.0.5",
+    "material-react-table": "^1.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
