--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "udemy",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://gateway-kms.apps.ocp4.pacosta.com",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -23,7 +22,7 @@
     "react-draggable": "^4.4.6",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
