--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
     "formik": "^2.4.4",
+    "formik-material-ui": "^4.0.0-alpha.2",
     "js-cookie": "^3.0.5",
     "material-react-table": "^1.15.0",
     "react": "^18.2.0",
